// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart.vue storeを用意してのレンダリングのテスト 1`] = `
<div class="cart">
    <h1 class="title">Your Cart</h1>
    <p style="display: none;">
        <i>Your cart is empty!</i>
        <router-link to="/">Go shopping</router-link>
    </p>
    <table class="table is-striped">
        <thead>
            <tr>
                <td>Name</td>
                <td>Price</td>
                <td>Quantity</td>
            </tr>
        </thead>
        <tbody>
            <tr>
                <td>a</td>
                <td>1</td>
                <td>10</td>
            </tr>
            <tr>
                <td>b</td>
                <td>2</td>
                <td>20</td>
            </tr>
            <tr>
                <td>c</td>
                <td>3</td>
                <td>30</td>
            </tr>
            <tr>
                <td>
                    <b>Total:</b>
                </td>
                <td></td>
                <td>
                    <b>$140</b>
                </td>
            </tr>
        </tbody>
    </table>
    <p>
        <button class="button is-primary">Checkout</button>
    </p>
</div>
`;

exports[`Cart.vue 初期状態のレンダリングのテスト 1`] = `
<div class="cart">
    <h1 class="title">Your Cart</h1>
    <p>
        <i>Your cart is empty!</i>
        <router-link to="/">Go shopping</router-link>
    </p>
    <table class="table is-striped" style="display: none;">
        <thead>
            <tr>
                <td>Name</td>
                <td>Price</td>
                <td>Quantity</td>
            </tr>
        </thead>
        <tbody>
            <tr>
                <td>
                    <b>Total:</b>
                </td>
                <td></td>
                <td>
                    <b>$0</b>
                </td>
            </tr>
        </tbody>
    </table>
    <p>
        <button class="button is-primary" style="display: none;">Checkout</button>
    </p>
</div>
`;
